Hot Module Reloading enabled

--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,11 @@
 {
-    "presets": [
-      "es2015",
-      "stage-0",
-      "react"
-    ],
-    "env": {
-      "dev": {
-        "presets": [
-          "react-hmre"
-         ]
-      }
-    },
-    "plugins": [
-      "transform-object-rest-spread"
-    ]
-  }
+  "presets": [
+    "es2015",
+    "stage-0",
+    "react",
+    "react-hmre"
+  ],
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
+}
