--- a/package.json
+++ b/package.json
@@ -4,17 +4,11 @@
   "description": "Zeipt's landing page",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "prestart": "npm run bundle",
-    "dev": "node server.js",
-    "bundle": "webpack --config webpack.config.js",
-    "init-cloudsql": "node server/model-cloudsql.js"
+    "start": "node server.js",
+    "bundle": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">=5"
-  },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -42,6 +36,7 @@
     "prop-types": "^15.5.8",
     "pug": "^2.0.0-alpha6",
     "react": "^15.5.3",
+    "react-dev-utils": "^5.0.0",
     "react-dom": "^15.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-inline-transition-group": "^2.1.5",
@@ -66,7 +61,10 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
     "eslint": "^4.16.0",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack-logging-plugin": "^0.1.2"
   }
 }
