--- a/package.json
+++ b/package.json
@@ -38,14 +38,18 @@
     "react": "^15.5.3",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^15.5.3",
+    "react-full-page": "^0.1.4",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-inline-transition-group": "^2.1.5",
     "react-inlinesvg": "^0.7.4",
     "react-redux": "^5.0.4",
+    "react-responsive-modal": "^2.0.1",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
+    "react-tabs": "^2.2.1",
     "react-three-renderer": "^3.1.0",
     "reactcss": "^1.2.2",
+    "reactjs-popup": "^1.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
